--- a/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal2_index_pre_and_backfilling/load_backfill_5_index.yaml
+++ b/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal2_index_pre_and_backfilling/load_backfill_5_index.yaml
@@ -8,6 +8,7 @@ isolation: TRANSACTION_REPEATABLE_READ
 collect_pg_stat_statements: false
 loaderthreads: 1
 terminals: 1
+yaml_version: v1.1
 works:
     work:
         rate: unlimited
@@ -15,6 +16,7 @@ works:
 microbenchmark:
     class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal2
     properties:
+        setAutoCommit: true
         # Goal2 - 4 :: create table with PK -> load data -> create 5 index
         workload: load_then_backfill_5_indexes
         tableName: orders
