--- a/config/yugabyte/regression_pipelines/bulkload/yb_colocated/goal1_varying_indexes/no_indexes.yaml
+++ b/config/yugabyte/regression_pipelines/bulkload/yb_colocated/goal1_varying_indexes/no_indexes.yaml
@@ -9,6 +9,7 @@ isolation: TRANSACTION_REPEATABLE_READ
 collect_pg_stat_statements: false
 loaderthreads: 1
 terminals: 1
+yaml_version: v1.1
 works:
     work:
         rate: unlimited
@@ -17,6 +18,7 @@ works:
 microbenchmark:
     class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal1
     properties:
+        setAutoCommit: true
         # Goal 1 - 1 :: create table with PK -> load data (no index)
         workload: noindex_load
         tableName: orders
