--- a/config/yugabyte/regression_pipelines/bulkload/yb_colocated/goal2_index_pre_and_backfilling/5_index_load.yaml
+++ b/config/yugabyte/regression_pipelines/bulkload/yb_colocated/goal2_index_pre_and_backfilling/5_index_load.yaml
@@ -9,6 +9,7 @@ isolation: TRANSACTION_REPEATABLE_READ
 collect_pg_stat_statements: false
 loaderthreads: 1
 terminals: 1
+yaml_version: v1.1
 works:
     work:
         rate: unlimited
@@ -16,6 +17,7 @@ works:
 microbenchmark:
     class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal2
     properties:
+        setAutoCommit: true
         # Goal2 - 3 :: create table with PK -> create 5 index -> Load data (5 index)
         workload: create_5_indexes_then_load
         tableName: orders
