--- a/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal1_varying_indexes/1_index.yaml
+++ b/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal1_varying_indexes/1_index.yaml
@@ -8,6 +8,7 @@ isolation: TRANSACTION_REPEATABLE_READ
 collect_pg_stat_statements: false
 loaderthreads: 1
 terminals: 1
+yaml_version: v1.1
 works:
     work:
         rate: unlimited
@@ -16,6 +17,7 @@ works:
 microbenchmark:
     class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal1
     properties:
+        setAutoCommit: true
         # Goal 1 - 2 :: create table with PK -> create 1 index -> load data (1 index)
         workload: create1index_load
         tableName: orders
