--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,24 +7,13 @@ log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=[%-5p] %d [%t] %x %c %M - %m%n
 
-# file appender
-log4j.appender.FA=org.apache.log4j.FileAppender
-log4j.appender.FA.File=debugLog.out
-log4j.appender.FA.Threshold=DEBUG
-log4j.appender.FA.Append=false
-# Define the layout for file appender
-log4j.appender.FA.layout=org.apache.log4j.PatternLayout
-log4j.appender.FA.layout.conversionPattern=%d [%t] %x %c %M - %m%n
-log4j.category.com.oltpbenchmark.api.Worker=DEBUG, FA
-log4j.additivity.com.oltpbenchmark.api.Worker=false
-
 log4j.logger.com.oltpbenchmark=INFO
 log4j.logger.com.oltpbenchmark.DBWorkload=INFO
 log4j.logger.com.oltpbenchmark.ThreadBench=INFO
 log4j.logger.com.oltpbenchmark.DistributionStatistics=INFO
 log4j.logger.com.oltpbenchmark.api.BenchmarkModule=INFO
 log4j.logger.com.oltpbenchmark.api.Loader=INFO
-#log4j.logger.com.oltpbenchmark.api.Worker=INFO
+log4j.logger.com.oltpbenchmark.api.Worker=INFO
 log4j.logger.com.oltpbenchmark.api.Procedure=INFO
 log4j.logger.com.oltpbenchmark.catalog.Catalog=INFO
 log4j.logger.com.oltpbenchmark.util.ThreadUtil=INFO
