--- a/config/yugabyte/regression_pipelines/wait_on_conflict/postgres/multi_threaded_explicit_lock_update_readcommitted_mastercard.yaml
+++ b/config/yugabyte/regression_pipelines/wait_on_conflict/postgres/multi_threaded_explicit_lock_update_readcommitted_mastercard.yaml
@@ -21,7 +21,7 @@ microbenchmark:
         setAutoCommit: false
         create:
             - drop table if exists update_test_table1;
-            - create table update_test_table1 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id asc))
+            - create table update_test_table1 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id))
         cleanup:
             - drop table if exists update_test_table1;
         loadRules:
