--- a/config/yugabyte/regression_pipelines/wait_on_conflict/yugabyte/multi_threaded_single_row_updates_with_varying_degree_of_lock_contentions.yaml
+++ b/config/yugabyte/regression_pipelines/wait_on_conflict/yugabyte/multi_threaded_single_row_updates_with_varying_degree_of_lock_contentions.yaml
@@ -1,6 +1,6 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?ApplicationName=featurebench&reWriteBatchedInserts=true
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?ApplicationName=featurebench&reWriteBatchedInserts=true&load-balance=false
 username: {{username}}
 password: {{password}}
 
