--- a/config/yugabyte/batch_inserts/rkn_batch_insert.yaml
+++ b/config/yugabyte/batch_inserts/rkn_batch_insert.yaml
@@ -1,8 +1,8 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://localhost:5433/yugabyte?ApplicationName=featurebench&reWriteBatchedInserts=true
-username: yugabyte
-password:
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?ApplicationName=featurebench&reWriteBatchedInserts=true
+username: {{username}}
+password: {{password}}
 createdb: drop database if exists yb_colocated; create database yb_colocated with colocated=true;
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
