--- a/config/yugabyte/regression_pipelines/orderby_workloads/postgres/ORDG2_index_filter_condition_type_impact.yaml
+++ b/config/yugabyte/regression_pipelines/orderby_workloads/postgres/ORDG2_index_filter_condition_type_impact.yaml
@@ -90,3 +90,15 @@ microbenchmark:
                     weight: 100
                     queries:
                         - query: select col_bigint_id_2 from Indexed1M_1 where col_bigint_id_2>1 order by col_bigint_id_2
+            - workload: ORDG2_ordby_bigint_pkey_column_desc
+              run:
+                  - name: yb_ordby_bigint_non_indexed_column
+                    weight: 100
+                    queries:
+                        - query: select col_bigint_id_1 from Indexed1M_1 where col_bigint_id_1>1 order by col_bigint_id_1 DESC
+            - workload: ORDG2_ordby_bigint_pkey_column_projectall
+              run:
+                  - name: yb_ordby_bigint_non_indexed_column
+                    weight: 100
+                    queries:
+                        - query: select * from Indexed1M_1 where col_bigint_id_1>1 order by col_bigint_id_1
