--- a/config/yugabyte/regression_pipelines/orderby_workloads/yugabyte/ORDG7_orderby_on_hash_partitioned_table.yaml
+++ b/config/yugabyte/regression_pipelines/orderby_workloads/yugabyte/ORDG7_orderby_on_hash_partitioned_table.yaml
@@ -123,3 +123,11 @@ microbenchmark:
                     weight: 100
                     queries:
                         - query: select col_bigint_id_4 from Indexed1M_1 where col_bigint_id_4>1 order by col_bigint_id_4
+
+            - workload: ORDG7_ordby_bigint_hash_pkey_with_filter_column_desc
+              run:
+                  - name: yb_ordby_bigint_non_indexed_column
+                    customTags: customer=1,schematype=regular,partition=hash,pkey=hash,cardinality=single,projection=hashpkey,filtercount=one,filteron=hashpkey,filtertype=comparision,queryshape=orderby,orderbyon=hashpkeydesc
+                    weight: 100
+                    queries:
+                        - query: select col_bigint_id_1 from Indexed1M_1 where col_bigint_id_1>1 order by col_bigint_id_1 DESC
