--- a/pom.xml
+++ b/pom.xml
@@ -260,6 +260,26 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.13.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.yugabyte</groupId>
+            <artifactId>jdbc-yugabytedb</artifactId>
+            <version>42.3.4</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/net.objecthunter/exp4j -->
+        <dependency>
+            <groupId>net.objecthunter</groupId>
+            <artifactId>exp4j</artifactId>
+            <version>0.4.8</version>
+        </dependency>
+
+
+
 
     </dependencies>
 
