--- a/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG13_pkey_rangeScan_INclause_with_tableCol_increasingRows.yaml
+++ b/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG13_pkey_rangeScan_INclause_with_tableCol_increasingRows.yaml
@@ -71,7 +71,7 @@ microbenchmark:
                     params: [500, 500]
         executeRules:
             - workload: scanG13_pkey_INclause_rangescan_increasing_rows_1row
-              customTags: schematype=regular,partition=range,pkey=asc,cardinality=single,projection=indexed,filtercount=one,filteron=rangeskey,filtertype=IN,queryshape=scan
+              customTags: schematype=regular,partition=range,pkey=asc,cardinality=single,projection=multiple,filtercount=one,filteron=rangeskey,filtertype=IN,queryshape=scan
               run:
                   - name: pkey_INclause_rangescan_increasing_rows_1row_test
                     weight: 100
@@ -82,7 +82,7 @@ microbenchmark:
                               util: RandomNumber
                               params: [ 1, 1000000 ]
             - workload: scanG13_pkey_INclause_rangescan_increasing_rows_10row
-              customTags: schematype=regular,partition=range,pkey=asc,cardinality=single,projection=indexed,filtercount=one,filteron=rangeskey,filtertype=IN,queryshape=scan
+              customTags: schematype=regular,partition=range,pkey=asc,cardinality=single,projection=multiple,filtercount=one,filteron=rangeskey,filtertype=IN,queryshape=scan
               run:
                   - name: pkey_INclause_rangescan_increasing_rows_10row_test
                     weight: 100
@@ -93,7 +93,7 @@ microbenchmark:
                               util: RandomNumber
                               params: [ 1, 1000000 ]
             - workload: scanG13_pkey_INclause_rangescan_increasing_rows_100row
-              customTags: customer=1,schematype=regular,partition=range,pkey=asc,cardinality=single,projection=indexed,filtercount=one,filteron=rangeskey,filtertype=IN,queryshape=scan
+              customTags: customer=1,schematype=regular,partition=range,pkey=asc,cardinality=single,projection=multiple,filtercount=one,filteron=rangeskey,filtertype=IN,queryshape=scan
               run:
                   - name: pkey_INclause_rangescan_increasing_rows_100row_test
                     weight: 100
@@ -104,7 +104,7 @@ microbenchmark:
                               util: RandomNumber
                               params: [ 1, 1000000 ]
             - workload: scanG13_pkey_INclause_rangescan_increasing_rows_1000row
-              customTags: customer=1,schematype=regular,partition=range,pkey=asc,cardinality=single,projection=indexed,filtercount=one,filteron=rangeskey,filtertype=IN,queryshape=scan
+              customTags: customer=1,schematype=regular,partition=range,pkey=asc,cardinality=single,projection=multiple,filtercount=one,filteron=rangeskey,filtertype=IN,queryshape=scan
               run:
                   - name: pkey_INclause_rangescan_increasing_rows_1000row_test
                     weight: 100
@@ -115,7 +115,7 @@ microbenchmark:
                               util: RandomNumber
                               params: [ 1, 1000000 ]
             - workload: scanG13_pkey_INclause_rangescan_increasing_rows_10000row
-              customTags: customer=1,schematype=regular,partition=range,pkey=asc,cardinality=single,projection=indexed,filtercount=one,filteron=rangeskey,filtertype=IN,queryshape=scan
+              customTags: customer=1,schematype=regular,partition=range,pkey=asc,cardinality=single,projection=multiple,filtercount=one,filteron=rangeskey,filtertype=IN,queryshape=scan
               run:
                   - name: pkey_INclause_rangescan_increasing_rows_10000row_test
                     weight: 100
