--- a/config/yugabyte/customer/colocated/50_threaded_update.yaml
+++ b/config/yugabyte/customer/colocated/50_threaded_update.yaml
@@ -3,6 +3,8 @@ driver: com.yugabyte.Driver
 url: jdbc:yugabytedb://localhost:5433/yugabyte?sslmode=disable&ApplicationName=featurebench&reWriteBatchedInserts=true&load-balance=false
 username: yugabyte
 password:
+createdb: drop database if exists yb_colocated; create database yb_colocated with colocation=true
+
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 1
