--- a/config/yugabyte/customer/colocated/single_threaded_update.yaml
+++ b/config/yugabyte/customer/colocated/single_threaded_update.yaml
@@ -22,18 +22,18 @@ microbenchmark:
         create:
             - DROP TABLE IF EXISTS orders;
             - CREATE TABLE orders(id bigserial, created_at timestamp, user_id bigint, product_id bigint, discount float, quantity int, subtotal float, tax float, total float, PRIMARY KEY(id));
-
+            - CREATE UNIQUE INDEX u_key ON orders(user_id, product_id);
         loadRules:
             - table: orders
-              rows: 1000000 # number of rows to be preloaded in the database before more updates happen in execute phase
+              rows: 1000000 # number of rows to be preloaded in the database before more inserts happen in execute phase
               columns:
                   - name: created_at
                     util: CurrentTime
                   - name: user_id
-                    util: RandomInt
+                    util: PrimaryIntGen
                     params: [1, 1000000] # one from the range [min, max]
                   - name: product_id
-                    util: RandomInt
+                    util: PrimaryIntGen
                     params: [1, 1000000] # one from the range [min, max]
                   - name: discount
                     util: RandomNoWithDecimalPoints
