--- a/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_columns.yaml
+++ b/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_columns.yaml
@@ -6,7 +6,7 @@ password: {{password}}
 
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
-loaderthreads: 4
+loaderthreads: 5
 terminals: 1
 collect_pg_stat_statements: true
 use_dist_in_explain : true
@@ -120,7 +120,10 @@ microbenchmark:
                     -   name: Select_with_4cols_test
                         weight: 100
                         queries:
-                            -   query: SELECT * from table_4_cols
+                            -   query: SELECT * from table_4_cols  where id=?
+                                bindings:
+                                    -   util: RandomNumber
+                                        params: [ 1, 10000000 ]
                                 count: 1
             -   workload: 4_col_insert
                 run:
@@ -141,7 +144,10 @@ microbenchmark:
                     -   name: Select_with_20cols_test
                         weight: 100
                         queries:
-                            -   query: SELECT * from table_20_cols
+                            -   query: SELECT * from table_20_cols where id=?
+                                bindings:
+                                    -   util: RandomNumber
+                                        params: [ 1, 10000000 ]
                                 count: 1
             -   workload: 20_col_insert
                 run:
@@ -165,7 +171,10 @@ microbenchmark:
                     -   name: Select_with_100cols_test
                         weight: 100
                         queries:
-                            -   query: SELECT * from table_100_cols
+                            -   query: SELECT * from table_100_cols where id=?
+                                bindings:
+                                    -   util: RandomNumber
+                                        params: [ 1, 10000000 ]
                                 count: 1
             -   workload: 100_col_insert
                 run:
@@ -189,7 +198,10 @@ microbenchmark:
                     -   name: Select_with_250cols_test
                         weight: 100
                         queries:
-                            -   query: SELECT * from table_250_cols
+                            -   query: SELECT * from table_250_cols where id=?
+                                bindings:
+                                    -   util: RandomNumber
+                                        params: [ 1, 10000000 ]
                                 count: 1
             -   workload: 250_col_insert
                 run:
@@ -213,7 +225,10 @@ microbenchmark:
                     -   name: select_with_500cols_test
                         weight: 100
                         queries:
-                            -   query: SELECT * from table_500_cols
+                            -   query: SELECT * from table_500_cols where id=?
+                                bindings:
+                                    -   util: RandomNumber
+                                        params: [ 1, 10000000 ]
                                 count: 1
             -   workload: 500_col_insert
                 run:
