--- a/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_columns_20.yaml
+++ b/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_columns_20.yaml
@@ -46,7 +46,10 @@ microbenchmark:
                     -   name: Select_with_20cols_test
                         weight: 100
                         queries:
-                            -   query: SELECT * from table_20_cols
+                            -   query: SELECT * from table_20_cols where id=?
+                                bindings:
+                                    -   util: RandomNumber
+                                        params: [ 1, 10000000 ]
                                 count: 1
             -   workload: 20_col_insert
                 run:
