--- a/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_columns_4.yaml
+++ b/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_columns_4.yaml
@@ -42,7 +42,10 @@ microbenchmark:
                     -   name: Select_with_4cols_test
                         weight: 100
                         queries:
-                            -   query: SELECT * from table_4_cols
+                            -   query: SELECT * from table_4_cols where id=?
+                                bindings:
+                                    -   util: RandomNumber
+                                        params: [ 1, 10000000 ]
                                 count: 1
             -   workload: 4_col_insert
                 run:
