--- a/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_columns_500.yaml
+++ b/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_columns_500.yaml
@@ -46,7 +46,10 @@ microbenchmark:
                     -   name: select_with_500cols_test
                         weight: 100
                         queries:
-                            -   query: SELECT * from table_500_cols
+                            -   query: SELECT * from table_500_cols where id=?
+                                bindings:
+                                    -   util: RandomNumber
+                                        params: [ 1, 10000000 ]
                                 count: 1
             -   workload: 500_col_insert
                 run:
