--- a/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_rowsize.yaml
+++ b/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_rowsize.yaml
@@ -6,7 +6,7 @@ password: {{password}}
 
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
-loaderthreads: 4
+loaderthreads: 5
 terminals: 1
 collect_pg_stat_statements: true
 use_dist_in_explain : true
@@ -124,7 +124,10 @@ microbenchmark:
                     -   name: select_rowsize_200b
                         weight: 100
                         queries:
-                            -   query: SELECT * from table_4_cols_200b
+                            -   query: SELECT * from table_4_cols_200b where id=?
+                                bindings:
+                                    -   util: RandomNumber
+                                        params: [ 1, 10000000 ]
                                 count: 1
             -   workload: 200b_insert
                 run:
@@ -148,7 +151,10 @@ microbenchmark:
                     -   name: select_rowsize_1kb
                         weight: 100
                         queries:
-                            -   query: SELECT * from table_4_cols_1kb
+                            -   query: SELECT * from table_4_cols_1kb where id=?
+                                bindings:
+                                    -   util: RandomNumber
+                                        params: [ 1, 10000000 ]
                                 count: 1
             -   workload: 1kb_insert
                 run:
@@ -172,7 +178,10 @@ microbenchmark:
                     -   name: select_rowsize_5kb
                         weight: 100
                         queries:
-                            -   query: SELECT * from table_4_cols_5kb
+                            -   query: SELECT * from table_4_cols_5kb where id=?
+                                bindings:
+                                    -   util: RandomNumber
+                                        params: [ 1, 10000000 ]
                                 count: 1
             -   workload: 5kb_insert
                 run:
@@ -196,7 +205,10 @@ microbenchmark:
                     -   name: select_rowsize_25kb
                         weight: 100
                         queries:
-                            -   query: SELECT * from table_4_cols_25kb
+                            -   query: SELECT * from table_4_cols_25kb where id=?
+                                bindings:
+                                    -   util: RandomNumber
+                                        params: [ 1, 10000000 ]
                                 count: 1
             -   workload: 25kbl_insert
                 run:
@@ -220,7 +232,10 @@ microbenchmark:
                     -   name: select_rowsize_125kb
                         weight: 100
                         queries:
-                            -   query: SELECT * from table_4_cols_125kb
+                            -   query: SELECT * from table_4_cols_125kb where id=?
+                                bindings:
+                                    -   util: RandomNumber
+                                        params: [ 1, 10000000 ]
                                 count: 1
             -   workload: 125kb_insert
                 run:
