--- a/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_rowsize_200b.yaml
+++ b/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_rowsize_200b.yaml
@@ -46,7 +46,10 @@ microbenchmark:
                     -   name: select_rowsize_200b
                         weight: 100
                         queries:
-                            -   query: SELECT * from table_4_cols_200b
+                            -   query: SELECT * from table_4_cols_200b where id=?
+                                bindings:
+                                    -   util: RandomNumber
+                                        params: [ 1, 10000000 ]
                                 count: 1
             -   workload: 200b_insert
                 run:
