--- a/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_rowsize_5kb.yaml
+++ b/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_rowsize_5kb.yaml
@@ -48,7 +48,10 @@ microbenchmark:
                     -   name: select_rowsize_5kb
                         weight: 100
                         queries:
-                            -   query: SELECT * from table_4_cols_5kb
+                            -   query: SELECT * from table_4_cols_5kb where id=?
+                                bindings:
+                                    -   util: RandomNumber
+                                        params: [ 1, 10000000 ]
                                 count: 1
             -   workload: 5kb_insert
                 run:
